--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
             
             <img src="https://github.com/ccuvely44/task001/blob/main/images/KU_Logo_002.jpg?raw=true" id="ku-logo-footer" alt="Kyungnam University">
             
-            <p id="copyright-text">ⓒ 2025. 백민국, 고유진, 남궁지욱 All rights reserved.</p>
+            <p id="copyright-text">ⓒ 2025. 남궁지욱, 고유진, 백민국 All rights reserved.</p>
         </div>
     </main>
 
@@ -1467,3 +1467,4 @@
     </script>
 </body>
 </html>
+
